bg(edit-dialog): fix edit dialog component - realign delete dialog comoponent buttons - add type property to cancel button - show added skill [Fixes #149959525]

--- a/src/app/pages/cancelrequest/cancelrequest.component.scss
+++ b/src/app/pages/cancelrequest/cancelrequest.component.scss
@@ -11,9 +11,9 @@ md-dialog-actions {
     width: 50%;
 }
 
-button { 
+button {
   margin-right: 10px;
-  width: 250px;
+  width: 100px;
 }
 
 md-dialog-content > p {
